src/main/kubernetes/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: useradd
  namespace: useradd
  labels:
    app: useradd
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: useradd
