src/main/kubernetes/05-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: useradd
  namespace: useradd
spec:
  gateways:
  - useradd-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /usuario
      method:
        exact: POST
    rewrite:
      uri: /usuario
    route:
    - destination:
        host: useradd
        port:
          number: 8080
